# sentiment-sense-app

./: .dockerignore  .gitignore  Caddyfile  Dockerfile  README.md  cli.py  demo_employees.csv  demo_questions.csv  docker-compose.yml  pyproject.toml
app/: admin.py  config.py  core.py  database.py  main.py  models.py  survey.py
app/services/: ai.py
app/templates/: base.html
app/templates/admin/: create_survey.html  dashboard.html  login.html  results.html  upload.html
app/templates/survey/: complete.html  expired.html  intro.html  questions.html
