[project]
name = "sentiment-sense"
version = "0.1.0"
description = "AI-powered dynamic employee sentiment survey tool"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite>=0.22.1",
    "bcrypt>=5.0.0",
    "fastapi>=0.135.3",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "jinja2>=3.1.6",
    "openai>=2.31.0",
    "python-multipart>=0.0.26",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.49",
    "uvicorn[standard]>=0.44.0",
]
